--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "jquery": "^3.3.1",
     "method-override": "^2.3.10",
     "mysql": "^2.15.0",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.3",
+    "str_replace": "^0.1.6"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
