--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
     "formidable": "^1.2.1",
+    "fs": "0.0.1-security",
     "jquery": "^3.3.1",
     "method-override": "^2.3.10",
     "mysql": "^2.15.0",
